# axum-auth

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  rustfmt.toml
src/: main.rs
src/api/: router.rs
src/api/controller/: auth_controller.rs
src/models/: mod.rs
src/models/dto/: auth.rs
src/models/entities/: auth.rs
src/service/: auth_interface.rs  mod.rs  paseto_service.rs
