[package]
name = "axum-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
axum = "0.8.1"
base64 = "0.22.1"
chrono = "0.4.39"
dotenv = "0.15.0"
ed25519-compact = "2.1.1"
env_logger = "0.11.6"
log = "0.4.24"
pasetors = "0.7.1"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
